Fix scaling issues on small screens

--- a/public/style.css
+++ b/public/style.css
@@ -3,7 +3,7 @@ body {
   background-color: #212121;
   color: #fff;
   font-family: Arial, sans-serif;
-  font-size: 16px;
+  font-size: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
